--- a/public/about/index.html
+++ b/public/about/index.html
@@ -111,8 +111,8 @@ She is involved in Database &hellip;">
 <li><p>Skills she knows :</p>
 
 <ol>
-<li><a href="http://guides.rubyonrails.org/">Ruby</a></li>
-<li><a href='http://www.ruby-lang.org/en/'>RubyOnRails</a></li>
+<li><a href="http://www.ruby-lang.org/en/">Ruby</a></li>
+<li><a href='http://guides.rubyonrails.org/'>RubyOnRails</a></li>
 <li><a href='http://jquery.com/'>jQuery</a></li>
 <li><a href="http://coffeescript.org/">Coffeescript</a></li>
 <li><a href="http://www.mysql.com/">Mysql</a></li></li>
