--- a/public/about/index.html
+++ b/public/about/index.html
@@ -104,10 +104,17 @@ She is involved in Database &hellip;">
       <div class="row-fluid">
         <div id="content">
           <ul>
-<li>Rashmi is a Ruby and Ruby on Rails professional working for Web Development.</li>
-<li>She has done many projects in RubyOnRails.</li>
+<li><p>Rashmi is a Ruby and Ruby on Rails professional working for Web Development.</p></li>
+<li><p>She has done many projects in RubyOnRails.</p></li>
 <li><p>She is involved in Database Design , Analysis ,Testing and Development.</p></li>
 <li><p>She is always passionate to learn and try new things.</p></li>
+<li><p>She loves to to do open source contribution also have contributed in Rails <a><a href="http://contributors.rubyonrails.org/">http://contributors.rubyonrails.org/</a></a></p></li>
+</ul>
+
+
+<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#114;&#x61;&#115;&#104;&#x6d;&#x69;&#49;&#52;&#x79;&#x61;&#100;&#97;&#x76;&#64;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;">&#x72;&#97;&#115;&#104;&#x6d;&#105;&#x31;&#x34;&#121;&#97;&#100;&#97;&#118;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#x6f;&#109;</a></a></p>
+
+<ul>
 <li><p>Skills she knows :</p>
 
 <ol>
