--- a/public/about/index.html
+++ b/public/about/index.html
@@ -108,11 +108,11 @@ She is involved in Database &hellip;">
 <li><p>She has done many projects in RubyOnRails.</p></li>
 <li><p>She is involved in Database Design , Analysis ,Testing and Development.</p></li>
 <li><p>She is always passionate to learn and try new things.</p></li>
-<li><p>She loves to to do open source contribution also have contributed in Rails <a><a href="http://contributors.rubyonrails.org/">http://contributors.rubyonrails.org/</a></a></p></li>
+<li><p>She loves to do open source contribution also have contributed in Rails <a><a href="http://contributors.rubyonrails.org/">http://contributors.rubyonrails.org/</a></a></p></li>
 </ul>
 
 
-<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#114;&#x61;&#115;&#104;&#x6d;&#x69;&#49;&#52;&#x79;&#x61;&#100;&#97;&#x76;&#64;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;">&#x72;&#97;&#115;&#104;&#x6d;&#105;&#x31;&#x34;&#121;&#97;&#100;&#97;&#118;&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#x6f;&#109;</a></a></p>
+<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#x6f;&#58;&#x72;&#x61;&#x73;&#x68;&#109;&#x69;&#49;&#52;&#121;&#x61;&#x64;&#x61;&#118;&#64;&#x67;&#x6d;&#97;&#x69;&#108;&#46;&#x63;&#111;&#109;">&#x72;&#x61;&#115;&#x68;&#109;&#105;&#49;&#x34;&#x79;&#x61;&#100;&#x61;&#118;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></a></p>
 
 <ul>
 <li><p>Skills she knows :</p>
