--- a/public/about/index.html
+++ b/public/about/index.html
@@ -112,7 +112,7 @@ She is involved in Database &hellip;">
 </ul>
 
 
-<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#x6d;&#97;&#105;&#108;&#116;&#x6f;&#58;&#114;&#97;&#x73;&#x68;&#109;&#105;&#49;&#x34;&#121;&#97;&#100;&#97;&#x76;&#x40;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#x6d;">&#x72;&#97;&#115;&#x68;&#109;&#105;&#x31;&#52;&#121;&#x61;&#100;&#x61;&#x76;&#64;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#x6d;</a></a></p>
+<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#114;&#x61;&#115;&#x68;&#109;&#x69;&#49;&#52;&#x79;&#x61;&#x64;&#x61;&#x76;&#64;&#x67;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#111;&#x6d;">&#x72;&#x61;&#115;&#104;&#109;&#x69;&#x31;&#52;&#x79;&#97;&#100;&#x61;&#x76;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></a></p>
 
 <ul>
 <li><p>Skills she knows :</p>
