--- a/public/about/index.html
+++ b/public/about/index.html
@@ -112,7 +112,7 @@ She is involved in Database &hellip;">
 </ul>
 
 
-<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x72;&#x61;&#115;&#x68;&#x6d;&#x69;&#49;&#52;&#x79;&#x61;&#x64;&#x61;&#118;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#46;&#x63;&#111;&#109;">&#114;&#x61;&#115;&#x68;&#x6d;&#x69;&#49;&#52;&#121;&#x61;&#x64;&#x61;&#x76;&#64;&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#111;&#109;</a></a></p>
+<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#x6d;&#x61;&#x69;&#x6c;&#116;&#x6f;&#58;&#114;&#x61;&#x73;&#104;&#x6d;&#105;&#x31;&#x34;&#x79;&#x61;&#100;&#x61;&#118;&#64;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#109;">&#114;&#x61;&#x73;&#104;&#109;&#x69;&#x31;&#52;&#x79;&#x61;&#x64;&#97;&#118;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#109;</a></a></p>
 
 <ul>
 <li><p>Skills she knows :</p>
