--- a/public/about/index.html
+++ b/public/about/index.html
@@ -112,7 +112,7 @@ She is involved in Database &hellip;">
 </ul>
 
 
-<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#109;&#97;&#105;&#x6c;&#x74;&#111;&#58;&#x72;&#97;&#x73;&#104;&#109;&#105;&#x31;&#52;&#x79;&#97;&#x64;&#x61;&#x76;&#x40;&#x67;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;">&#x72;&#97;&#115;&#x68;&#x6d;&#x69;&#49;&#x34;&#121;&#97;&#x64;&#x61;&#118;&#x40;&#103;&#109;&#97;&#x69;&#108;&#46;&#99;&#x6f;&#x6d;</a></a></p>
+<p>  I work as freelancer so if you want to hire me contact me at <a href='mailto:rashmi14yadav@gmail.com'><a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#x3a;&#x72;&#97;&#x73;&#104;&#x6d;&#105;&#x31;&#x34;&#x79;&#97;&#100;&#97;&#118;&#64;&#x67;&#x6d;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;">&#x72;&#97;&#115;&#104;&#x6d;&#x69;&#49;&#52;&#x79;&#97;&#100;&#x61;&#x76;&#64;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#99;&#x6f;&#x6d;</a></a></p>
 
 <ul>
 <li><p>Skills she knows :</p>
